deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: Vaibhav-Sarode
      app.kubernetes.io/component: Vaibhav-Sarode
      app.kubernetes.io/instance: Vaibhav-Sarode
    name: Vaibhav-Sarode
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: Vaibhav-Sarode
    template:
      metadata:
        labels:
          deploymentconfig: Vaibhav-Sarode
      spec:
        containers:
        - image: Vaibhav-Sarode
          imagePullPolicy: Always
          name: Vaibhav-Sarode
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - Vaibhav-Sarode
        from:
          kind: ImageStreamTag
          name: Vaibhav-Sarode
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: Vaibhav-Sarode
      app.kubernetes.io/component: Vaibhav-Sarode
      app.kubernetes.io/instance: Vaibhav-Sarode
    name: Vaibhav-Sarode
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: Vaibhav-Sarode
      app.kubernetes.io/component: Vaibhav-Sarode
      app.kubernetes.io/instance: Vaibhav-Sarode
    name: Vaibhav-Sarode
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: Vaibhav-Sarode
      weight: 100
    wildcardPolicy: None
